tests/ui/const-generics/generic_const_exprs/type_mismatch.stderr
error: the constant `N` is not of type `usize`
  --> $DIR/type_mismatch.rs:8:26
   |
LL | impl<const N: u64> Q for [u8; N] {}
   |                          ^^^^^^^ expected `usize`, found `u64`

error[E0046]: not all trait items implemented, missing: `ASSOC`
  --> $DIR/type_mismatch.rs:8:1
   |
LL |     const ASSOC: usize;
   |     ------------------ `ASSOC` from trait
...
LL | impl<const N: u64> Q for [u8; N] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `ASSOC` in implementation

error[E0391]: cycle detected when building an abstract representation for `q_user::{constant#0}`
  --> $DIR/type_mismatch.rs:12:25
   |
LL | pub fn q_user() -> [u8; <[u8; 13] as Q>::ASSOC] {}
   |                         ^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires building THIR for `q_user::{constant#0}`...
  --> $DIR/type_mismatch.rs:12:25
   |
LL | pub fn q_user() -> [u8; <[u8; 13] as Q>::ASSOC] {}
   |                         ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires type-checking `q_user::{constant#0}`...
  --> $DIR/type_mismatch.rs:12:25
   |
LL | pub fn q_user() -> [u8; <[u8; 13] as Q>::ASSOC] {}
   |                         ^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires building an abstract representation for `q_user::{constant#0}`, completing the cycle
note: cycle used when checking that `q_user` is well-formed
  --> $DIR/type_mismatch.rs:12:1
   |
LL | pub fn q_user() -> [u8; <[u8; 13] as Q>::ASSOC] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0046, E0391.
For more information about an error, try `rustc --explain E0046`.
